--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,15 +31,10 @@ jobs:
         with:
           python-version: 3.9
 
-      - name: Install CI dependencies
+      - name: Install tox
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
+          pip install tox
 
-      - name: Lint
-        run: |
-          black --target-version=py36 paul_mclendahand
-          flake8 tests
-
-      - name: Run tests
+      - name: Run tests and linting with tox
         run: tox
