--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,17 @@
 [tox]
-envlist = py36,py37,py38,py36-lint
+envlist = py36,py37,py38,py39,py36-lint
 
 [testenv]
+install_command = pip install {packages}
+extras = dev
 commands =
-    pip install -r requirements-dev.txt
     pmac --help
 
 [testenv:py36-lint]
 basepython = python3.6
-commands = pip install -r requirements-dev.txt
-           black --check --target-version=py36 paul_mclendahand
-           flake8 paul_mclendahand
+install_command = pip install {packages}
+extras = dev
+changedir = {toxinidir}
+commands =
+    black --check --target-version=py36 src setup.py
+    flake8 src
