--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,7 @@ python =
     3.11: py311
 
 [testenv]
-install_command = pip install {packages}
-extras = dev
+deps = -rrequirements-dev.txt
 commands =
     pmac --help
 
