--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,7 @@ jobs:
       - name: Update pip and install dev requirements
         run: |
           python -m pip install --upgrade pip
-          pip install '.[dev]'
+          pip install -r requirements-dev.txt
 
-      - name: Lint
-        run: make lint
-
-      - name: Test
+      - name: Test and lint
         run: make test
