--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,16 @@
 [tox]
-envlist = py37,py38,py39,py310,py37-lint
+envlist = py37,py38,py39,py310,py311,py37-lint
+
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    3.11: py311
 
 [testenv]
-install_command = pip install {packages}
-extras = dev
+deps = -rrequirements-dev.txt
 commands =
     pmac --help
 
