Rewrite tests to use pytest and click
This adds pytest and reworks the tests to run the CliRunner.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,11 @@
 [tox]
-envlist = py37,py38,py39,py310,py311,py37-lint
+envlist =
+    py37
+    py37-lint
+    py38
+    py39
+    py310
+    py311
 
 [gh-actions]
 python =
@@ -12,13 +18,11 @@ python =
 [testenv]
 deps = -rrequirements-dev.txt
 commands =
-    pmac --help
+    pytest {posargs}
 
 [testenv:py37-lint]
 basepython = python3.7
-install_command = pip install {packages}
-extras = dev
 changedir = {toxinidir}
 commands =
-    black --check --target-version=py37 src setup.py
-    flake8 src
+    black --check --target-version=py37 src setup.py tests
+    flake8 setup.py src tests
