Prep for 3.0.0 release

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,12 +1,14 @@
 -e .
 
-black==22.10.0
+black==22.12.0
 build==0.9.0
 check-manifest==0.49
 cogapp==3.3.0
-flake8==5.0.4
 pytest==7.2.0
-rich==12.6.0
+rich==13.0.0
+twine==4.0.2
+
+# NOTE(willkg): We can unpin these when we drop support for Python 3.7.
 tox==3.27.1
 tox-gh-actions==2.11.0
-twine==4.0.2
+flake8==5.0.4
