--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,9 +6,9 @@ check-manifest==0.49
 cogapp==3.3.0
 pytest==7.2.0
 rich==13.0.0
+ruff==0.0.262
 twine==4.0.2
 
 # NOTE(willkg): We can unpin these when we drop support for Python 3.7.
 tox==3.27.1
 tox-gh-actions==2.11.0
-flake8==5.0.4
