--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dev = [
     "twine",
     "tox",
     "tox-gh-actions",
+    "tox-uv",
 ]
 
 
@@ -52,25 +53,24 @@ build-backend = "setuptools.build_meta"
 
 
 [tool.ruff]
+target-version = "py38"
+src = ["src", "tests"]
+line-length = 88
+
+[tool.ruff.lint]
 # Enable pycodestyle (E), pyflakes (F), and bugbear (B) rules
 select = ["E", "F", "B"]
 
 # Ignore line length violations--Black handles those
-line-length = 88
 ignore = ["E501"]
 
-target-version = "py38"
-
-src = ["src", "tests"]
-
-[tool.ruff.flake8-quotes]
+[tool.ruff.lint.flake8-quotes]
 docstring-quotes = "double"
 
 
 [tool.tox]
 legacy_tox_ini = """
 [tox]
-isolated_build = True
 envlist =
     py38
     py38-lint
@@ -78,6 +78,8 @@ envlist =
     py310
     py311
     py312
+isolated_build = True
+uv_python_preference = only_managed
 
 [gh-actions]
 python =
